docs: README 전면 재작성 — v2 현행화 (endpoint 20개·PydanticAI·보고서 링크)
2026-06-18 버전 이후 미반영된 v2 변경을 실측 코드 기준으로 전면 갱신:

사실 오류 정정:
- POST /chat/room/{roomId}/hide 제거 반영 (isActive 의미 재정의로 소멸)
  → /chat/room/{roomId}/close · /chat/room/active 추가
- "14개 endpoint" → 실제 20개 (Auth 4·User 3·Company 4·Chat 6·Internal 3)
- Company /count·/main, Internal 메인 핀 등록/해제 endpoint 누락분 추가
- AI 파트 "FastAPI Backend" → gongsitoktok-pydantic (PydanticAI, 구 CrewAI)

버전 명시:
- Spring Boot 3.5.4 · JJWT 0.12.6 · Springdoc 2.6.0 · Caffeine 3.1.8

신규 섹션:
- 빠른 시작(Docker PG + bootRun + Swagger)
- 환경변수 일람(.env) · 빌드/프로파일(dev/prod) 분리
- 30분 만료 3트리거(+ChatRoomExpiryScheduler) · SOFT 단일 활성 방 · Pin 방어
- OAuth2·비번변경·탈퇴를 "백엔드 구현 완료 · 프론트 UI 미노출" 주석 처리
- 종합 시스템 보고서 GitHub Pages 링크 (report_mvp2.0.html · v1.0)
- 실제 패키지 트리(jwt/oauth/validator/client/scheduler 하위 포함)

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>